Correción de checks y buscador

--- a/assets/pastevents.html
+++ b/assets/pastevents.html
@@ -43,13 +43,17 @@
             <h1>Past Events</h1>
         </div>
 
-        <div class="checks" id="checksPad">
-        </div>
+        <div class="filters-cont">
+            <div class="checks" id="checksPad">
 
-        <form class="search-inp" id="search-inp">
-            <input type="text" id="formSearch" class="form-control">
-            <button class="btn btn-info mb-2" id="buttonSearch">Search</button>
-        </form>
+            </div>
+
+            <form class="search-inp" id="search-inp">
+
+                <input type="text" id="formSearch" class="form-control">
+                <input type="submit" id="searchSubmit" class="searchBtn" value="Search">
+            </form>
+        </div>
 
         <div class="main-events" id="mainEvents">
         </div>
