--- a/index.html
+++ b/index.html
@@ -40,96 +40,17 @@
         <div class="title-main">
             <h1>Home</h1>
         </div>
-        <div class="checks" id="checksPad">
-            <!-- <div class="input-checks">
-                <input type="checkbox" id="categories" value="food fair">
-                <label>Food Fair</label>
+        <div class="filters-cont">
+            <div class="checks" id="checksPad">
+
             </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="museum"> Museum
-            </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="costume party"> Costume Party
-            </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="music concert"> Music Concert
-            </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="race">Race
-            </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="book exchange">Book Exchange
-            </div>
-            <div class="input-checks">
-                <input type="checkbox" id="categories" value="cinema"> Cinema
-            </div> -->
+
+            <form class="search-inp" id="search-inp">
+
+                <input type="text" id="formSearch" class="form-control">
+                <input type="submit" id="searchSubmit" class="searchBtn" value="Search">
+            </form>
         </div>
-
-        <!-- <div class="categ-check" id="">
-                <label>
-                    Category
-                    <input type="checkbox" name="opcion" id="check">
-                </label>
-                <label>
-                    Category
-                    <input type="checkbox" name="opcion" id="check">
-                </label>
-                <label>
-                    Category
-                    <input type="checkbox" name="opcion" id="check">
-                </label>
-                <label>
-                    Category
-                    <input type="checkbox" name="opcion" id="check">
-                </label>
-                <label>
-                    Category
-                    <input type="checkbox" name="opcion" id="check">
-                </label>
-            </div> -->
-        <!-- <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Categories
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <label class="dropdown-item">
-                            Category
-                            <input type="checkbox" name="opcion" id="check">
-                        </label>
-                    </li>
-                    <li>
-                        <label class="dropdown-item">
-                            Category
-                            <input type="checkbox" name="opcion" id="check">
-                        </label>
-                    </li>
-                    <li>
-                        <label class="dropdown-item">
-                            Category
-                            <input type="checkbox" name="opcion" id="check">
-                        </label>
-                    </li>
-                    <li>
-                        <label class="dropdown-item">
-                            Category
-                            <input type="checkbox" name="opcion" id="check">
-                        </label>
-                    </li>
-                    <li>
-                        <label class="dropdown-item">
-                            Category
-                            <input type="checkbox" name="opcion" id="check">
-                        </label>
-                    </li>
-                </ul>
-            </div> -->
-        <form class="search-inp" id="search-inp">
-
-            <input type="text" id="formSearch" class="form-control">
-            <button class="btn btn-info mb-2" id="buttonSearch">Search</button>
-        </form>
 
         <div class="main-events" id="mainEvents">
 
