--- a/assets/upcomingevents.html
+++ b/assets/upcomingevents.html
@@ -41,14 +41,17 @@
         <div class="title-main">
             <h1>Upcoming Events</h1>
         </div>
-        <div class="checks" id="checksPad">
+        <div class="filters-cont">
+            <div class="checks" id="checksPad">
+
+            </div>
+
+            <form class="search-inp" id="search-inp">
+
+                <input type="text" id="formSearch" class="form-control">
+                <input type="submit" id="searchSubmit" class="searchBtn" value="Search">
+            </form>
         </div>
-
-        <form class="search-inp" id="search-inp">
-
-            <input type="text" id="formSearch" class="form-control">
-            <button class="btn btn-info mb-2" id="buttonSearch">Search</button>
-        </form>
         <div class="main-events" id="mainEvents">
 
         </div>
